Opened 18 years ago

Closed 18 years ago

#935 closed bug (fixed)

[BeMail] crash on font change + Revert

Reported by: diver Owned by: axeld
Priority: normal Milestone: R1
Component: Applications/Mail Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

BeMail crashes if you change font in prefs and then press Revert button. bt will follow...

Attachments (2)

BeMail_pref.PNG (33.8 KB ) - added by diver 18 years ago.
bemail-crash.patch (799 bytes ) - added by kaliber 18 years ago.
patch to fix the crash

Download all attachments as: .zip

Change History (4)

by diver, 18 years ago

Attachment: BeMail_pref.PNG added

by kaliber, 18 years ago

Attachment: bemail-crash.patch added

patch to fix the crash

comment:1 by kaliber, 18 years ago

Can someone review/apply the patch?

comment:2 by axeld, 18 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev20740. Thanks for the patch, and sorry for the delay!

Note: See TracTickets for help on using tickets.