* Applied patch by kaliber to fix bug #935; the result of FindItem() was not checked. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@20740 a95241bf-73f2-0310-859d-f6bbb57e9c96